# python-project-83

./: Makefile  README.md  package-lock.json  package.json  pyproject.toml
hexlet-code/: Makefile  pyproject.toml
hexlet-code/hexlet_code/: __init__.py
hexlet-code/hexlet_code/page_analyzer/: app.py
page_analyzer/: __init__.py  app.py
page_analyzer/templates/: home.html
