[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["tyranich"]
license = "MIT"
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
make = "^0.1.6.post2"
gunicorn = "^20.1.0"
railway = "^0.0.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
